fixed: leere nachricht abschicken, added scrollbars on messageslist

--- a/client/stylesheets/index.scss
+++ b/client/stylesheets/index.scss
@@ -81,3 +81,7 @@ $primary-color: #387ef5;
   right: -8px;
   content: "";
 }
+
+.menu-content {
+  overflow-y: auto;
+}
